--- a/Data Structures/Arrays/Longest Increasing Subsequence.ipynb
+++ b/Data Structures/Arrays/Longest Increasing Subsequence.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "638a0fc6-e651-4762-9c12-2d013b560a50",
+   "id": "c9d9ebb6",
    "metadata": {},
    "source": [
     "# Longest Increasing Subsequence (LIS) Problem\n",
@@ -16,29 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "59257dc1-508a-4e9f-be69-397f34d50ac0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def longest_increasing_subsequence(arr):\n",
-    "    \"\"\"\n",
-    "    Function to find the length of the longest increasing subsequence in the given array.\n",
     "    \n",
-    "    Parameters:\n",
-    "    arr (list): A list of integers.\n",
-    "    \n",
-    "    Returns:\n",
-    "    int: The length of the longest increasing subsequence.\n",
-    "    \"\"\"\n",
     "    if not arr:\n",
     "        return 0\n",
     "\n",
@@ -54,7 +38,7 @@
     "\n",
     "# Example usage\n",
     "arr = [10, 22, 9, 33, 21, 50, 41, 60, 80]\n",
-    "print(longest_increasing_subsequence(arr)) # Output: 6\n"
+    "print(longest_increasing_subsequence(arr)) # Output: 6"
    ]
   },
   {
@@ -62,14 +46,11 @@
    "id": "37f571e9-1d12-4046-b972-e18fd09cbde5",
    "metadata": {},
    "source": [
-    "## Analysis\n",
-    "\n",
     "### Complexity\n",
     "- **Time Complexity:** **$O(n^2$)** due to the nested loop for comparisons where n is the length of the input array.\n",
     "- **Space Complexity:** **$O(n$)** for storinf dp array\n",
     "\n",
     "### Optimality and Completeness\n",
-    "\n",
     "The algorithm is optimal in the sense that it finds the correct length of the longest increasing subsequence. However, it does not necessarily find the subsequence itself. If you need the subsequence, you would need to backtrack from the maximum value in the dp array to reconstruct the subsequence.\n",
     "\n",
     "The algorithm is complete because it considers all possible subsequences ending at each element and correctly updates the dp array to reflect the longest increasing subsequence found so far. It ensures that the final answer is the length of the longest increasing subsequence in the entire array."
